Implement the pwa version to the code

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
-    "name": "Laravel Package Tutorial",
+    "name": "KMS Online",
     "short_name": "LPT",
     "start_url": "/index.php",
     "background_color": "#6777ef",
-    "description": "Tutorial of Laravel Package",
+    "description": "KMS Online Services",
     "display": "fullscreen",
     "theme_color": "#6777ef",
     "icons": [
